# rust_particles

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  index.html  serve.py
.cargo/: config.toml
assets/: sw.js
src/: app.rs  bvh.rs  lib.rs  main.rs
src/bvh/: bvh.rs  mod.rs
src/shaders/: compute.wgsl  particles.wgsl  test_shader.wgsl
