[package]
name = "rust_particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native", "webgl"]
native = ["glam/std"]
webgl = ["wgpu/webgl",
    "wgpu/fragile-send-sync-non-atomic-wasm",]

[dependencies]
wgpu = { version = "0.19.1", default-features = false }
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }

# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, features = [
#     "default_fonts",
#     "wgpu",
# ] }

glam = { version = "0.25", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1.14", features = ["derive"] }
rand = "0.8.5"
log = "0.4"
rayon = "1.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "0.19.1" }
env_logger = "0.11.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-rayon = { version = "1.2.1", features = ["no-bundler"] }
# wasm-bindgen-rayon = { version = "1.2.1"}

wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[profile.release]
debug = true
