[package]
name = "rust_particles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["native"]
native = ["glam/std"]

[dependencies]
winit = "0.30"
egui = "0.31"
# wgpu = { version = "0.19.1" }
# wgpu = { version = "0.19.1", features = ["fragile-send-sync-non-atomic-wasm"] }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
glam = { version = "0.30", default-features = false, features = ["bytemuck"] }
bytemuck = { version = "1.20", features = ["derive"] }
rand = "0.9"
log = "0.4"
itertools = "0.14"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1.10"
env_logger = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "24.0", default-features = false, features = ["webgl"] }
# wasm-bindgen-rayon = { version = "1.0", features = ["no-bundler"] }
# wasm-bindgen-rayon = { version = "1.0"}
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
getrandom = { version = "0.3", features = ["wasm_js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }

[profile.release]
debug = true
